k8s/00-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: bassac-cms
  labels:
    name: bassac-cms
    environment: production
